ChangeLog for eclectic

2005-04-25 Tom Martin <slarti@gentoo.org>

	* modules/mailer-symlink.eclectic: Added mailwrapper symlink module.

2005-04-11 Aaron Walker <ka0ttic@gentoo.org>

	* man/Makefile.am: forgot to add $(man_MANS) to EXTRA_DIST.
	* modules/profile-symlink.eclectic: Added make.profile symlink module.
	* modules/bashcomp.eclectic: Fixed do_list to ignore *~.
	* misc/Makefile.am: Added Makefile.am.
	* misc/eclectic.bashcomp: Added eclectic command-line completion.

2005-04-10 Aaron Walker <ka0ttic@gentoo.org>

	* man/Makefile.am: Added Makefile.am.

2005-04-07 Danny van Dyk <kugelfang@gentoo.org>

	* modules/blas.eclectic: Added package information to outputs.
	* man/blas.eclectic.1: Added a manpage for the blas module.

2005-04-04 Danny van Dyk <kugelfang@gentoo.org>

	* man/eclectic.1: Added a rudimental manpage.

2005-03-24 Danny van Dyk <kugelfang@gentoo.org>

	* libs/config.bash.in: Fixed store_config(), added add_config().
	* libs/core.bash.in: Added function has().
	* libs/multilib.bash.in: Added multilib library.
	* modules/blas.eclectic: Added blas module.

2005-02-22 Aaron Walker <ka0ttic@gentoo.org>

	* modules/bashcomp.eclectic: Added bashcomp module.

2005-02-22 Ciaran McCreesh <ciaranm@gentoo.org>

	* ChangeLog: Start keeping a ChangeLog. GNU format.