@@ -10,11 +10,15 @@ Ciaran McCreesh <ciaranm@gentoo.org>
     Libraries:  core, output
 
 Danny van Dyk <kugelfang@gentoo.org>
-    Modules:    blas
+    Manpages
+    Modules:    blas, lapack
     Libraries:  config, multilib
 
 Aaron Walker <ka0ttic@gentoo.org>
-    Modules:    bashcomp
+    Modules:    bashcomp, profile-symlink
+
+Tom Martin <slarti@gentoo.org>
+    Modules:    mailer-symlink
 
 Copyright
 ---------
