@@ -1,6 +1,6 @@
 .TH "ECLECTIC" "5" "April 2005" "Gentoo Linux" "eclectic"
 .SH "NAME"
-eclectic \- Gentoo multipurpose configuration and managment tool
+eclectic \- Gentoo's multipurpose configuration and managment tool
 .SH "SYNOPSIS"
 \fBeclectic\fR \fImodule\fR [\fIaction\fR [\fIoption(s)\fR]]
 .SH "DESCRIPTION"
