@@ -1,0 +1,40 @@
+.TH "ECLECTIC" "5" "April 2005" "Gentoo Linux" "eclectic"
+.SH "NAME"
+profile\-symlink.eclectic \- The profile management module for Gentoo's eclectic
+.SH "SYNOPSIS"
+\fBeclectic profile\-symlink\fR [\fBhelp\fR|\fBusage\fR]
+.br 
+\fBeclectic profile\-symlink\fR \fBlist\fR
+.br 
+\fBeclectic profile\-symlink\fR \fBset\fR \fIprofile\fR
+.br 
+\fBeclectic profile\-symlink\fR \fBshow\fR
+
+.SH "DESCRIPTION"
+\fBeclectic\fR is Gentoo's configuration and management tool. It features
+modules that care for the individual administrative tasks.
+.SH "ACTION: LIST"
+\fBeclectic profile\-symlink list\fR
+.br 
+Displays an orderd list of available and (for your architecture) valid profiles. 
+
+phi / # eclectic profile\-symlink list
+.br 
+Available profile symlink targets:
+  [1]   default\-linux/amd64/2005.0
+.SH "ACTION: SET"
+\fBeclectic profile\-symlink setup\fR [.fi profile\fR]
+.br 
+Select a valid \fIprofile\fR for future use with portage.
+.SH "ACTION: SHOW"
+\fBeclectic profile\-symlink show\fR
+.br 
+Shows your system's currently active BLAS implementations.
+
+phi / # eclectic profile\-symlink show
+Current make.profile symlink:
+  /usr/portage/profiles/default\-linux/amd64/2005.0
+.SH "AUTHOR"
+Danny van Dyk <kugelfang@gentoo.org>
+.SH "REVISION"
+$Id$
